--- a/Areas/User/Views/UserHome/UserProfile.cshtml
+++ b/Areas/User/Views/UserHome/UserProfile.cshtml
@@ -440,7 +440,7 @@
                                 <div class="row ticket-detail my-3">
                                     <div class="bg-white ticket-container align-items-center">
                                         <div class="col-md-1 history-img">
-                                            <img src="~/assets/images/logo/cinema-logo.png" alt="">
+                                            <img src="~/assets/images/subimg/icon-rules.9c822007.png" alt="">
                                         </div>
                                         <div class="col-md-5 ticket-movie-name">
                                             <span>@notice.content</span> <br/>
