--- a/Areas/Admin/assets/css/adminstyle.css
+++ b/Areas/Admin/assets/css/adminstyle.css
@@ -43,6 +43,7 @@ button:focus {
 /* List */
 .list-group-horizontal {
     border: none;
+    margin-left: -30px;
     cursor: pointer;
 }
 
@@ -57,6 +58,13 @@ button:focus {
 
 .list-gr-1 {
     font-size: 14px;
+}
+
+.movie-area,
+.cinema-corner,
+.event-list,
+.ticket-price {
+    padding: 20px 10px;
 }
 
 .list-gr-1 li {
@@ -208,7 +216,15 @@ button:focus {
     color: #F26B38;
 }
 
+.account-list li:hover {
+    border-radius: 0;
+    transition: all 0.3s ease;
+    background-color: #fb770b1a;
+    border-left: 4px solid #F26B38;
+}
+
 .account-list a {
+    padding: 10px 4px;
     text-decoration: none;
     color: #000;
     font-size: 14px;
@@ -367,7 +383,7 @@ button:focus {
 
 .progress-value {
     position: relative;
-    font-size: 15px;
+    font-size: 12px;
     font-weight: 600;
     color: #7d2ae8;
 }
@@ -485,7 +501,7 @@ button:focus {
 
 .details span {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     color: #4a4a4a;
 }
 
@@ -502,11 +518,127 @@ button:focus {
 
 .content a {
     text-decoration: none;
-    margin-left: 20rem;
+    display: flex;
+    justify-content: end;
+    align-items: center;
 }
 
 .fa-circle-info {
     color: #f58028;
     font-size: 1.5rem;
     display: flex;
+}
+
+/* toast-mess message */
+.toast-mess {
+    position: fixed;
+    top: 25px;
+    right: 30px;
+    border-radius: 12px;
+    background: #fff;
+    padding: 12px 30px 10px 20px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+    border-left: 6px solid #4070f4;
+    overflow: hidden;
+    transform: translateX(calc(100% + 30px));
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
+    display: flex !important;
+    height: 70px;
+    justify-content: center;
+    align-items: center;
+}
+
+    .toast-mess.active {
+        transform: translateX(0%);
+    }
+
+    .toast-mess .toast-mess-content {
+        display: flex;
+        align-items: center;
+    }
+
+.toast-mess-content .check {
+    display: flex;
+    margin-right: 2rem;
+    align-items: center;
+    justify-content: center;
+    height: 35px;
+    width: 35px;
+    background-color: #4070f4;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 50%;
+}
+
+.toast-mess-content .error {
+    display: flex;
+    margin-right: 2rem;
+    align-items: center;
+    justify-content: center;
+    height: 35px;
+    width: 35px;
+    background-color: red;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 900;
+    border-radius: 50%;
+}
+
+.toast-mess-content .message {
+    display: flex;
+    flex-direction: column;
+    margin: 0 20px;
+}
+
+.message .text {
+    font-size: 15px;
+    font-weight: 400;
+    color: #666666;
+}
+
+    .message .text.text-1 {
+        font-weight: 600;
+        color: #333;
+    }
+
+.toast-mess .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    padding: 5px;
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+    .toast-mess .close:hover {
+        opacity: 1;
+    }
+
+.toast-mess .progress-btn {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    background: #ddd;
+}
+
+    .toast-mess .progress-btn:before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        background-color: #4070f4;
+    }
+
+.progress-btn.active:before {
+    animation: progress 5s linear forwards;
+}
+
+@keyframes progress {
+    100% {
+        right: 100%;
+    }
 }
