--- a/Areas/Admin/Views/User/UserList.cshtml
+++ b/Areas/Admin/Views/User/UserList.cshtml
@@ -159,7 +159,7 @@
                     response.userList.forEach(function (user) {
                         var newRow = '<tr>' +
                             '<td>' + user.full_name + '</td>' +
-                            '<td>' + new Date(user.userDate).toLocaleDateString('vi-VN') + '</td>' +
+                            '<td>' + user.userDate + '</td>' +
                             '<td>' + user.email + '</td>' +
                             '<td>' +
                             '</tr>';
